登录和首页数据增加异常处理

--- a/public/login.html
+++ b/public/login.html
@@ -49,7 +49,7 @@
 	    <script type="text/javascript">
 	    	$.ajax({
 	    		type:"post",
-	    		url:"/index.php/index/login/index",
+	    		url:"/index.php/index/index/index",
 	    		async:true,
 	    		data:{"user":"admin","pass":"123"},
 	    		success: function(result){
